--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,11 @@
 # ===============================
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/agileresultstracker
+spring.datasource.url=jdbc:mysql://localhost:3306/agileresultstracker?useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=12345
+spring.datasource.tomcat.connection-properties=useUnicode=true;characterEncoding=UTF-8
+
 
 # ===============================
 # JPA / HIBERNATE
@@ -15,11 +17,12 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
+
 server.port = 5000
 
 # ===============================
 # telegrambot
 # ===============================
-telegrambot.webHookPath=https://fe15294f56d3.ngrok.io
+telegrambot.webHookPath=https://a1ebd7421e69.ngrok.io
 telegrambot.botUserName=AgileResultsBot
 telegrambot.botToken=1325836446:AAH18BUtMDA7aFc-YH7AKwsL9sbUAky_i3Q
