--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,12 @@
             <version>1.18.14</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.11.3</version>
+        </dependency>
+
 
 
     </dependencies>
