--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 # DATABASE
 # ===============================
 
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/agileresultstracker?useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/agileresultstracker?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=12345
 spring.datasource.tomcat.connection-properties=useUnicode=true;characterEncoding=UTF-8
@@ -23,6 +23,8 @@ server.port = 5000
 # ===============================
 # telegrambot
 # ===============================
-telegrambot.webHookPath=https://a1ebd7421e69.ngrok.io
+telegrambot.webHookPath=https://ecfe5299a2cf.ngrok.io
 telegrambot.botUserName=AgileResultsBot
 telegrambot.botToken=1325836446:AAH18BUtMDA7aFc-YH7AKwsL9sbUAky_i3Q
+
+notifier.processPeriod=30000
