--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 # ===============================
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/agileresultstracker?useUnicode=true&characterEncoding=UTF-8&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/agileresultstracker?useUnicode=true&serverTimezone=Europe/Moscow&characterEncoding=UTF-8&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=12345
 spring.datasource.tomcat.connection-properties=useUnicode=true;characterEncoding=UTF-8
@@ -14,7 +14,7 @@ spring.datasource.tomcat.connection-properties=useUnicode=true;characterEncoding
 # ===============================
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 server.port = 5000
@@ -22,7 +22,7 @@ server.port = 5000
 # ===============================
 # telegrambot
 # ===============================
-telegrambot.webHookPath=https://d3e63bc50cac.ngrok.io
+telegrambot.webHookPath=https://061573e6545f.ngrok.io
 telegrambot.botUserName=AgileResultsBot
 telegrambot.botToken=1325836446:AAH18BUtMDA7aFc-YH7AKwsL9sbUAky_i3Q
 
