--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,7 @@ server.port = 5000
 # ===============================
 # telegrambot
 # ===============================
-telegrambot.webHookPath=https://061573e6545f.ngrok.io
+# telegrambot.webHookPath=https://061573e6545f.ngrok.io
 telegrambot.botUserName=AgileResultsBot
 telegrambot.botToken=1325836446:AAH18BUtMDA7aFc-YH7AKwsL9sbUAky_i3Q
 
