--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,4 +27,4 @@ telegrambot.botUserName=AgileResultsBot
 telegrambot.botToken=1325836446:AAH18BUtMDA7aFc-YH7AKwsL9sbUAky_i3Q
 
 
-notifier.processPeriod=0 0 18 * * ?
+notifier.processPeriod=* * 8 * * *
