--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,8 +23,11 @@ server.port = 5000
 # telegrambot
 # ===============================
 telegrambot.webHookPath=https://agileresultsbot.herokuapp.com
+#telegrambot.webHookPath=https://4b38d327596d.ngrok.io
 telegrambot.botUserName=AgileResultsBot
 telegrambot.botToken=1325836446:AAH18BUtMDA7aFc-YH7AKwsL9sbUAky_i3Q
 
 
-notifier.processPeriod=0 0 6 * * *
+notifier.processPeriod=0 0 7 * * *
+notifier.fridayReport=0 0 7 * * FRI
+notifier.mondayNotice=0 0 7 * * MON
